<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CalculateActivity">

    <Button
        android:id="@+id/btnClear"
        android:layout_width="314dp"
        android:layout_height="49dp"
        android:layout_marginLeft="16dip"
        android:layout_marginRight="16dip"
        android:layout_marginBottom="400dp"
        android:text="@string/btnClear"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.628"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnCal" />

    <Button
        android:id="@+id/btnCal"
        android:layout_width="314dp"
        android:layout_height="52dp"
        android:layout_marginLeft="16dip"
        android:layout_marginTop="200dp"
        android:layout_marginRight="16dip"

        android:text="@string/btnCal"
        app:layout_constraintBottom_toTopOf="@+id/btnClear"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.628"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/unitEditText" />

    <EditText
        android:id="@+id/unitEditText"
        android:layout_width="315dp"
        android:layout_height="54dp"
        android:layout_marginLeft="16dip"
        android:layout_marginRight="16dip"
        android:ems="10"
        android:hint="@string/etName"
        android:inputType="textPersonName|numberDecimal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.697"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.313" />

    <TextView
        android:id="@+id/resultTextView"
        android:layout_width="277dp"
        android:layout_height="49dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="120dp"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>